Wed Apr 29 12:37:03 BST 2009  Tom Mortimer <tom@lemurconsulting.com>

    * docs/api.rst,
    * flax/searchserver/application.py,
    * flax/searchserver/controller.py,
    * flax/searchserver/backends/xappy_backend.py,
    * flax/searchserver/backends/__init__.py,
    * flax/searchserver/backends/base_backend.py: Split database 
      access into reader and writer classes, and moved DB writes 
      into a separate thread (one per DB). Added temporary flush 
      resource and support for adding docs with specified ID. 
      Passes current PHP tests.

Mon Apr 27 09:04:15 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/application.py,
	  flax/searchserver/backends/base_backend.py,
	  flax/searchserver/backends/xappy_backend.py,
	  flax/searchserver/controller.py,settings.py: Add base_uri and
	  backend_settings to settings.py.  Pass these through to the
	  controller, and then on to the backend (passing the db specific
	  base_uri to each database).

Mon Apr 27 08:46:36 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/api.rst: Add details of the results of a search.

Fri Apr 24 14:05:19 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/application.py,
	  flax/searchserver/backends/base_backend.py,
	  flax/searchserver/backends/xappy_backend.py: Basic implementation
	  of a simple search method.

Thu Apr 23 00:51:02 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* ext/__init__.py,flax/searchserver/application.py,
	  flax/searchserver/backends/__init__.py,
	  flax/searchserver/backends/base_backend.py,
	  flax/searchserver/backends/xappy_backend.py,flax/searchserver/,
	  runserver.py: Major rework; split backend specific code into
	  backends/ subdirectory.  Lots of work preparing for running the
	  indexing in a separate thread (though this isn't done yet).

Thu Apr  9 11:32:29 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
    