@@ -1,3 +1,10 @@
+Wed Apr 29 15:29:44 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
+
+    * flax/searchserver/schema.py: Fixed problem with language code.
+    * flax/searchserver/application.py: Added param conversion to 
+      search_simple.
+    * flax/searchserver/backends/xappy_backend.py: Fixed search_simple.
+
 Wed Apr 29 12:37:03 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
 
     * docs/api.rst,
